Little misalignment fixes

--- a/to-do-list/src/App.css
+++ b/to-do-list/src/App.css
@@ -182,6 +182,10 @@ html {
   max-width: 80%;
   flex-grow: 1;
 }
+
+.exportDateProgress {
+  flex-basis: 100%;
+}
 /* Main Layout */
 .to-do-list {
   flex-grow: 1;
